# measles_modeling

./: .gitignore  LICENSE  Makefile  README.md  animate_sird.py  config.yaml  main.py  pyproject.toml
